<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="19dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="338:281"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_launcher_background"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/heart_24_px"
        app:layout_constraintEnd_toEndOf="@id/image_container"
        app:layout_constraintTop_toTopOf="@id/image_container" />


    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/notosans_medium"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_container"
        tools:text="@string/item_name" />

    <TextView
        android:id="@+id/tv_item_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/right_gray"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        tools:text="@string/item_tag" />

    <TextView
        android:id="@+id/tv_item_disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_item_tag"
        app:layout_constraintTop_toBottomOf="@id/tv_item_tag"
        tools:text="@string/item_disc" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="72"
        android:progressDrawable="@drawable/background_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_disc" />

    <TextView
        android:id="@+id/tv_item_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_medium"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/tv_item_disc"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        tools:text="@string/item_cost" />

    <TextView
        android:id="@+id/tv_item_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/notosans_medium"
        android:textColor="@color/red_orange"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_cost"
        app:layout_constraintStart_toEndOf="@id/tv_item_cost"
        app:layout_constraintTop_toTopOf="@id/tv_item_cost"
        tools:text="@string/item_percent" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/time_24_px"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_cost"
        app:layout_constraintEnd_toStartOf="@id/tv_day"
        app:layout_constraintTop_toTopOf="@id/tv_item_cost" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_medium"
        android:textColor="@color/right_gray"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_cost"
        app:layout_constraintEnd_toEndOf="@id/tv_item_disc"
        app:layout_constraintTop_toTopOf="@id/tv_item_cost"
        tools:text="@string/item_day" />


</androidx.constraintlayout.widget.ConstraintLayout>