<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.home.ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="11dp"
        android:paddingTop="17dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alarm_24_px"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/user" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:src="@drawable/setting_24_px"
            app:layout_constraintRight_toLeftOf="@id/alarm"
            app:layout_constraintTop_toTopOf="@id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:tabIndicatorColor="@color/transparent"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/red_orange"
        app:tabTextAppearance="@style/MainTabTheme.Selected">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab4" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab5" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tab">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="360:307"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/middle_tab"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="9dp"
                app:layout_constraintDimensionRatio="246:55"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:layout_constraintWidth_percent="0.68"
                app:tabIndicatorColor="@color/transparent"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/dark_gray"
                app:tabTextAppearance="@style/MiddleTabTheme.Selected">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_tab1" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_tab2" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_tab3" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/project_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/middle_tab" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/indicator"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/project_pager"
                app:tabBackground="@drawable/background_indicator_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabPaddingEnd="19dp"
                app:tabPaddingStart="19dp" />

            <!-- 공개예정 프로젝트 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upcoming_project_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indicator">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/upcoming_project_title_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/upcoming_project_title"
                        style="@style/HomeTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_project_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/arrow_24_px"
                        app:layout_constraintBottom_toBottomOf="@id/upcoming_project_title"
                        app:layout_constraintLeft_toRightOf="@id/upcoming_project_title"
                        app:layout_constraintTop_toTopOf="@id/upcoming_project_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/upcoming_project_title_container"
                    app:spanCount="2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upcoming_project_btn"
                    style="@style/HomeButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="11dp"
                    android:text="@string/upcoming_project_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_upcoming_project" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 진행중인 기획전 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/exhibition_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_project_container">

                <TextView
                    android:id="@+id/title_exhibition"
                    style="@style/HomeTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/exhibition_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_exhibition"
                    style="@style/ScrollbarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="11dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_exhibition"
                    tools:listitem="@layout/item_home_exhibition" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 인기 추천 프로젝트 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popular_project_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exhibition_container">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/popular_project_title_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/popular_project_title"
                        style="@style/HomeTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_project_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/arrow_24_px"
                        app:layout_constraintBottom_toBottomOf="@id/popular_project_title"
                        app:layout_constraintLeft_toRightOf="@id/popular_project_title"
                        app:layout_constraintTop_toTopOf="@id/popular_project_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/popular_project_title_container"
                    app:spanCount="2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/popular_project_btn"
                    style="@style/HomeButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="11dp"
                    android:text="@string/popular_project_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_popular_project" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 신규 추천 프로젝트 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_project_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_project_container">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_project_title_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/new_project_title"
                        style="@style/HomeTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_project_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/arrow_24_px"
                        app:layout_constraintBottom_toBottomOf="@id/new_project_title"
                        app:layout_constraintLeft_toRightOf="@id/new_project_title"
                        app:layout_constraintTop_toTopOf="@id/new_project_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_new_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/new_project_title_container"
                    app:spanCount="2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_project_btn"
                    style="@style/HomeButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="11dp"
                    android:text="@string/new_project_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_new_project" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>